--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -1,4 +1,4 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 @use '@uq-uidf/foundation-global/src/scss/global' as *;
 @use 'global' as *;
 @import 'font-awesome/scss/mixins';
@@ -10,40 +10,40 @@
 
 .form {
   &__required {
-    color: $alert;
+    color: core.$alert;
   }
 
   &__description {
     color: $form-description-color;
     font-size: .875rem;
     font-style: italic;
-    margin-bottom: 1rem;
+    margin-bottom: core.$space;
   }
 
   &__help-text {
     color: $form-description-color;
     font-size: .875rem;
-    margin-top: 0;
-    margin-bottom: 1rem;
+    margin-top: core.$space-none;
+    margin-bottom: core.$space;
   }
 
   &__inline-error-message {
-    background-color: $alert;
-    color: $uq-white;
+    background-color: core.$alert;
+    color: core.$uq-white;
     display: block;
     font-size: rem-calc(14px);
     font-style: normal;
     font-weight: 400;
     line-height: 1.357;
-    margin-bottom: 1rem;
-    padding: 7px 8px 8px 8px;
+    margin-bottom: core.$space;
+    padding: core.$space-sm;
   }
 
   &--transparent-fieldsets {
     fieldset {
       border: 0;
-      padding: 0;
-      margin: 0;
+      padding: core.$space-none;
+      margin: core.$space-none;
     }
   }
 }
@@ -51,7 +51,7 @@
 legend {
   &.form__legend {
     &.form__legend--error {
-      color: $alert;
+      color: core.$alert;
     }
   }
 }
@@ -61,14 +61,14 @@ fieldset {
     font-size: .875rem;
     font-weight: 500;
     line-height: 1.5;
-    padding: 0;
-    margin: 0 0 1rem 0;
+    padding: core.$space-none;
+    margin-bottom: core.$space;
   }
 }
 
 label {
   font-weight: 500;
-  margin-bottom: 1rem;
+  margin-bottom: core.$space;
   white-space: normal;
 
   + input[type="text"], 
@@ -106,17 +106,17 @@ label {
   > input[type="color"], 
   > textarea,
   > select {
-    margin-bottom: 0;
-    margin-top: rem-calc(4px);
+    margin-bottom: core.$space-none;
+    margin-top: rem-calc(core.$space-xs);
   }
 
   &.form__label {
     &.form__label--disabled {
-      color: $uq-neutral-dark20;
+      color: core.$uq-neutral-dark20;
       cursor: not-allowed;
     }
     &.form__label--error {
-      color: $alert;
+      color: core.$alert;
       position: relative;
 
       > input[type="text"], 
@@ -138,7 +138,7 @@ label {
         &.form__input {
           &.form__input--error {
             + .form__inline-error-message {
-              margin-top: 0;
+              margin-top: core.$space-none;
             }
           }
         }
@@ -183,15 +183,15 @@ textarea,
 select {
   &.form__input {
     &.form__input--error {
-      border-color: $alert;
+      border-color: core.$alert;
 
       &:focus {
-        border-color: $alert;
+        border-color: core.$alert;
       }
     }
 
     + .form__inline-error-message {
-      margin-top: -1rem;
+      margin-top: -core.$space;
     }
   }
 }
@@ -200,16 +200,16 @@ input[type="checkbox"],
 input[type="radio"] {
   float: left;
   clear: left;
-  margin-bottom: 0;
-  margin-right: rem-calc(6px);
-  margin-top: rem-calc(3px);
+  margin-bottom: core.$space-none;
+  margin-right: rem-calc(core.$space-sm);
+  margin-top: rem-calc(core.$space-xs);
   
   + label {
     font-weight: 300;
     display: block;
-    margin-left: 0;
-    margin-right: 0;
-    margin-bottom: 1rem;
+    margin-left: core.$space-none;
+    margin-right: core.$space-none;
+    margin-bottom: core.$space;
     // So long labels on multiple lines don't break around the radio/checkbox.
     max-width: 80%;
     //vertical-align: top;
@@ -221,7 +221,7 @@ input[type="radio"] {
 
   &.form__input {
     &.form__input--error {
-      margin-left: 10px;
+      margin-left: core.$space-sm;
     }
   }
 
@@ -230,7 +230,7 @@ input[type="radio"] {
       &.form__label--error {
         &:before {
           background-color: $alert;
-          bottom: -4px;
+          bottom: -core.$space-xs;
           content: "";
           display: inline-block;
           left: 0;
@@ -305,7 +305,7 @@ input[type="reset"][readonly] {
 // errors.
 input.error,
 textarea.error {
-  margin-bottom: 1rem;
+  margin-bottom: core.$space;
 }
 
 input.field-add-more-submit {
@@ -323,20 +323,20 @@ input[type='reset'] {
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   line-height: normal;
-  margin: 0 0 1.25rem;
+  margin: core.$space-none core.$space-none core.$space-md;
   position: relative;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  padding: 1rem 2rem 1.0625rem 2rem;
+  padding: core.$space core.$space-lg;
   font-size: 1rem;
-  background-color: $uq-red-dark20; //#f04124
-  border-color: $uq-red-dark40; //#cf2a0e
-  color: $uq-white;
+  background-color: core.$uq-red-dark20; //#f04124
+  border-color: core.$uq-red-dark40; //#cf2a0e
+  color: core.$uq-white;
 
   &:hover, &:focus {
-    background-color: $uq-red-dark40; //#cf2a0e
-    color: $uq-white;
+    background-color: core.$uq-red-dark40; //#cf2a0e
+    color: core.$uq-white;
   }
 }
 
@@ -347,21 +347,21 @@ input[type='reset'] {
 // Visually connect file uploads to the upload button.
 .form-managed-file .form-file {
   background: transparent;
-  border: 1px dashed $uq-neutral; //#ddd
-  border-right: 0;
-  padding: 0.8rem;
+  border: 1px dashed core.$uq-neutral; //#ddd
+  border-right: core.$space-none;
+  padding: core.$space; //0.8rem
 }
 
 .form-radios,
 .form-checkboxes {
-  margin-bottom: 1rem;
+  margin-bottom: core.$space;
 }
 
 .captcha {
-  margin: 1rem 0;
+  margin: core.$space core.$space-none;
 
   img {
-    margin-bottom: 0.5rem;
+    margin-bottom: core.$space-sm;
   }
 }
 
@@ -391,7 +391,7 @@ select {
     }
 
     + .form__inline-error-message {
-      margin-top: -1rem;
+      margin-top: -core.$space;
     }
   }
 }
@@ -446,7 +446,7 @@ input[type='file'] {
   color: $form-description-color;
   font-size: 0.875rem;
   font-style: italic;
-  margin-bottom: 1rem;
+  margin-bottom: core.$space;
 }
 
 // Move description closer to input fields.
@@ -455,7 +455,7 @@ textarea,
 .resizable-textarea,
 .date-date {
   & + .description {
-    margin-top: -0.8rem;
+    margin-top: -core.$space;
   }
 }
 
@@ -473,7 +473,7 @@ textarea,
     &::before {
       @include fa-icon;
       content: $fa-var-arrows;
-      color: $uq-neutral-dark40; //#777
+      color: core.$uq-neutral-dark40; //#777
     }
   }
 }
@@ -484,35 +484,35 @@ select[multiple='multiple'] {
 }
 
 .error-summary {
-  background-color: desaturate(lighten($alert, 62.5%), 25%);
-  border: 1px solid $alert;
+  background-color: desaturate(lighten(core.$alert, 62.5%), 25%);
+  border: 1px solid core.$alert;
   border-left-width: 3px;
   padding: $column-gutter / 2;
-  margin-bottom: 1.5rem;
+  margin-bottom: core.$space-md;
   &__title {
-    color: $body-font-color;
+    color: core.$body-font-color;
     font-size: 1.125rem;
     font-weight: 500;
-    margin: 0 0 .875rem 0;
+    margin: core.$space-none core.$space-none core.$space core.$space-none;
   }
   &_body {
     color: $body-font-color;
-    font-size: .875rem;
+    font-size: core.$space; //.875rem
   }
   &__list {
     color: $body-font-color;
-    font-size: .875rem;
+    font-size: core.$space; //.875rem
     margin: 0;
     &__item {
-      margin-bottom: .4rem;
+      margin-bottom: core.$space-xs;
       line-height: 1.5;
     }
     a {
-      color: $alert;
+      color: core.$alert;
       text-decoration: underline;
       font-weight: 400;
       &:hover, &:focus {
-        color: darken($alert, 5%);
+        color: darken(core.$alert, 5%);
       }
     }
   }
