--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -1,4 +1,4 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 @use '@uq-uidf/foundation-global/src/scss/global' as *;
 @use '@uq-uidf/foundation-block-grid/src/scss/global' as *;
 @use 'global' as *;
@@ -7,7 +7,7 @@
 .grid-menu {
   @include block-grid(
     $per-row: 1,
-    $spacing: 0
+    $spacing: core.$space-none
   );
 
   // Behave as 3 column layout by default.
@@ -33,7 +33,7 @@
     font-size: 1.375rem;
     font-weight: 400;
     line-height: normal;
-    padding: 1rem 1.25rem;
+    padding: core.$space core.$space-md;
     position: relative;
 
     &::after {
@@ -45,13 +45,13 @@
     }
 
     &:hover {
-      background-color: $link-color;
+      background-color: core.$link-color;
       color: $linked-list-color-hover;
       text-decoration: none;
 
       &::after {
-        @include fa-icon;
-        content: $fa-var-angle-right;
+        //@include fa-icon; 
+        content: core.$fa-var-angle-right;
         right: 1rem;
       }
 
@@ -74,18 +74,18 @@
     font-size: .8rem;
     font-weight: 300;
     line-height: normal;
-    margin-top: .25rem;
+    margin-top: core.$space-xs;
   }
 
   &__icon {
-    margin-right: .5rem;
+    margin-right: core.$space-sm;
   }
 
   // Dark text variant.
   &--dark-text {
     .grid-menu__link,
     a {
-      color: $dark-palette-color;
+      color: core.$dark-palette-color;
     }
   }
 }
@@ -98,12 +98,12 @@
       @extend %light-palette;
 
       &:hover {
-        background-color: $light-palette-link-color;
-        color: $link-color;
+        background-color: core.$light-palette-link-color;
+        color: core.$link-color;
 
         .grid-menu__description {
-          background-color: $light-palette-link-color;
-          color: $link-color;
+          background-color: core.$light-palette-link-color;
+          color: core.$link-color;
         }
       }
     }
@@ -117,12 +117,12 @@
       @extend %dark-palette;
 
       &:hover {
-        background-color: $link-color;
-        color: $uq-white;
+        background-color: core.$link-color;
+        color: core.$uq-white;
 
         .grid-menu__description {
-          background-color: $link-color;
-          color: $uq-white;
+          background-color: core.$link-color;
+          color: core.$uq-white;
         }
       }
     }
@@ -133,7 +133,7 @@
 .section--background-image {
   .grid-menu {
     a {
-      border-color: rgba($uq-white, .4);
+      border-color: rgba(core.$uq-white, .4);
     }
   }
 }
