--- a/packages/lists/src/scss/_global.scss
+++ b/packages/lists/src/scss/_global.scss
@@ -1,4 +1,4 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 
 $h3-font-size: 1.438rem;
-$pane-shaded-bg: $uq-neutral-light20; //f5f5f5;
+$pane-shaded-bg: core.$uq-neutral-light20; //f5f5f5;
