--- a/packages/page-header/src/scss/_global.scss
+++ b/packages/page-header/src/scss/_global.scss
@@ -1,3 +1,3 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 
-$page-header-shaded-bg: $uq-neutral-light20; //f5f5f5;
+$page-header-shaded-bg: core.$uq-neutral-light20; //f5f5f5;
